[package]
name = "samanlainen"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/raspi/samanlainen"
authors = ["Pekka Järvinen"]
description = "Delete duplicate files. Uses SHA512."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
clap = { version = "3.2.8", features = ["derive"] }
sha2 = "0.10.2"

[lib]
name = "samanlainen_lib"
path = "src/lib.rs"

[[bin]]
name = "samanlainen"
path = "src/bin/samanlainen.rs"
