# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "samanlainen"
version = "0.2.1"
edition = "2021"
homepage = "https://github.com/raspi/samanlainen"
authors = ["Pekka Järvinen"]
description = "Delete duplicate files. Uses SHA512."

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
#panic = "abort"

[dependencies]
walkdir = "2"
clap = { version = "4.1.13", features = ["derive"] }
sha2 = "0.10.2"
parse-size = "1.0.0"
atty = "0.2.14"
termcolor = "1.1.3"

[lib]
name = "samanlainen"
path = "src/lib.rs"

[[bin]]
name = "samanlainen"
path = "src/bin/samanlainen.rs"
